# chaBots-NERV-WRO-Future-Engineers-2025

./: .gitignore  README.1.md  README.2.md  README.md  get_lidar_info.py  oto.py  otos_bias.json  prueba.py  software_documentation.md  ultra_simple
code/vision/: main.py
install/: local_setup.sh  setup.sh
install/otos_reader/lib/otos_reader/: otos_node
install/otos_reader/share/otos_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/otos_reader/share/otos_reader/launch/: otos_reader.launch.py
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rplidar_ros/share/rplidar_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  rplidar_rosConfig-version.cmake  rplidar_rosConfig.cmake
install/rplidar_ros/share/rplidar_ros/environment/: ament_prefix_path.dsv  path.dsv
install/rplidar_ros/share/rplidar_ros/launch/: rplidar_a1_launch.py  rplidar_a2m12_launch.py  rplidar_a2m7_launch.py  rplidar_a2m8_launch.py  rplidar_a3_launch.py  rplidar_c1_launch.py  rplidar_s1_launch.py  rplidar_s1_tcp_launch.py  rplidar_s2_launch.py  rplidar_s2e_launch.py  rplidar_s3_launch.py  rplidar_t1_launch.py  view_rplidar_a1_launch.py  view_rplidar_a2m12_launch.py  (+10 more)
install/sparkfun_qwiic_adxl313/share/sparkfun_qwiic_adxl313/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_qwiic_as6212/share/sparkfun_qwiic_as6212/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_qwiic_ccs811/share/sparkfun_qwiic_ccs811/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_qwiic_dual_encoder_reader/share/sparkfun_qwiic_dual_encoder_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_qwiic_eeprom/share/sparkfun_qwiic_eeprom/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_qwiic_pir/share/sparkfun_qwiic_pir/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_qwiic_proximity/share/sparkfun_qwiic_proximity/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_top_phat_button/share/sparkfun_top_phat_button/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sparkfun_ublox_gps/share/sparkfun_ublox_gps/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/teensy_communication/share/teensy_communication/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision_node/lib/vision_node/: color_detection_node
install/vision_node/share/vision_node/: package.sh  package.xml
install/wall_follower/share/wall_follower/: package.sh  package.xml
log/: latest_build  latest_list
models/chassis/: camera-base.stl  chassis-base.stl  lidar-base.stl
models/gearbox/: gearbox-base.stl  gearbox-rim.stl
models/steering-system/: steering-system-assembly.stl  steering-system-base.stl  steering-system-bracketconnector.stl  steering-system-bracketwheels.stl  steering-system-servoconnector.stl
otos_env/: pyvenv.cfg
schemes/: README.md
sketch_aug11a/: sketch_aug11a.ino
src/: README.md  otos_bias.json
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/otos_reader/: package.xml  setup.cfg  setup.py
src/otos_reader/launch/: otos_reader.launch.py
src/otos_reader/otos_reader/: otos_node.py
src/teensy_communication/: CMakeLists.txt  package.xml
src/teensy_communication/config/: filtros.yaml  scan_filters.yaml
src/teensy_communication/launch/: obstaculos.launch.py  robot.launch.py  teensy_communication.launch.py
src/teensy_communication/src/: SerialPort.cpp  SerialPort.h  TeensyCommNode.cpp  TeensyCommNode.h  otos_bias.json  teensy_comm_node.cpp  teensy_obs_node.cpp
src/teensy_communication/urdf/: robot.urdf
src/vision_node/: package.xml  setup.py
src/vision_node/vision_node/: calib_colors.npz  calibrate.py  color_detection_node.py  color_detection_node.py.py
src/wall_follower/: package.xml  setup.py
t-photos/: README.md
teensy/: teensy.ino
video/: README.md
(+22 files in other folders)
