<?xml version="1.0"?>
<package format="3">
  <name>otos_reader</name>
  <version>0.0.1</version>
  <description>Nodo ROS 2 en Python para leer datos del sensor SparkFun OTOS con manejo de bias y reconexión</description>

  <maintainer email="tu_correo@example.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <!-- Dependencias de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- (Opcional) Si necesitas otras dependencias de ROS 2 -->
  <!-- <exec_depend>sensor_msgs</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
