<?xml version="1.0"?>
<package format="3">
  <name>teensy_communication</name>
  <version>0.1.0</version>
  <description>ROS 2 node that sends data to a Teensy over UART (GPIO) using /dev/ttyAMA0.</description>

  <maintainer email="you@example.com">Roy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export/>
</package>
